@@ -1,6 +1,8 @@
 VERSION 0.5.0
 
 IN PROGRESS...
++ Heritage quest
+* Improved galaxy map view (star sprites, hints do not draw outside of window)
 
 
 ==========================================
